--- a/Module-2-solution/css/style.css
+++ b/Module-2-solution/css/style.css
@@ -3,12 +3,17 @@
 }
 
 h1 {
+	font-family: Arial, Helvetica, sans-serif;;
 	text-align: center;	
 }
 
-div.col-lg-4 {
+.col-lg-4 {
 	background-color: #A9A9A9;
 	margin-bottom: 10px;
+}
+
+.row {
+	width: 100%;
 }
 
 #Chicken, #Beef, #Sushi{	
