--- a/Module 3 solution/css/style.css
+++ b/Module 3 solution/css/style.css
@@ -5,6 +5,11 @@ body {
   background-color: orange;
 }
 
+#header-nav {
+	background-color: #12BB98;
+	
+}
+
 .navbar-header {
   border-radius: 0;
   border: 0;
@@ -17,7 +22,7 @@ body {
 
 }
 #main-content {
-	background-color: orange;
+	
 	color: black;
 }
 
@@ -42,13 +47,19 @@ body {
 
 #nav-list {
 	background-color: yellow;
+
 }
 
 
 section {
-	background-color: grey;
+	background-color: #BA3265;
+
 }
 
 button {
 	margin: 1px solid black;
+}
+
+#collapsable-nav {
+	color: red;
 }
